# nicecount

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  auth.py  config.py  constants.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  settings.py  ui.py  users.py  videos.py
app/services/: analysis.py  bootstrap.py  detection_settings.py  live_preview.py  master_classes.py  storage.py  vehicle_classification.py  video_conversion.py  video_metadata.py
app/templates/layouts/: auth.html  base.html
app/templates/pages/: analysis.html  count_lines.html  gpu_audit.html  login.html  (+4 more)
app/web/: analysis.js  app.css  app.js  count_lines.js  gpu_audit.js  login.js  master_classes.js  settings.js  users.js  video_overlay_math.js  videos.js
scripts/windows/: NiceCount_Install_Launcher.bat  NiceCount_Run_Launcher.bat  NiceCount_Update_Force_Launcher.bat  NiceCount_Update_Launcher.bat  bootstrap_full_windows.bat  bootstrap_full_windows.ps1  install_windows.bat  install_windows.ps1  pull_and_start_windows.ps1  run_local_windows.ps1  start_windows_server.bat  start_windows_server.ps1  update_windows.bat  update_windows.ps1
sql/: 00_create_database.sql  01_schema.sql  02_seed_example.sql  03_mvp_minimal_app.sql  04_video_count_lines.sql  05_vehicle_event_count_lines.sql  06_detection_settings.sql  07_master_classes.sql  08_video_status_converting.sql  09_vehicle_classification_standard.sql  10_detection_pipeline_refactor.sql  11_detection_runtime_settings.sql
tests/: test_analysis_overlay_math.js  test_vehicle_classification.py
(+1 files in other folders)
